--- a/package.json
+++ b/package.json
@@ -8,14 +8,16 @@
     "woocommerce-mcp-server": "./src/index.js"
   },
   "scripts": {
-    "start": "node src/index.js",
-    "test": "echo \"No tests specified\" && exit 0"
+    "start": "node src/index.js"
   },
   "dependencies": {
-    "@modelcontextprotocol/sdk": "^0.5.0",
-    "@woocommerce/woocommerce-rest-api": "^1.4.1"
+    "@modelcontextprotocol/sdk": "latest",
+    "@woocommerce/woocommerce-rest-api": "latest"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   },
   "keywords": ["mcp", "woocommerce", "api", "claude"],
-  "author": "Your Name",
+  "author": "AlejandroDL46",
   "license": "MIT"
 }
